--- a/test-page.html
+++ b/test-page.html
@@ -1,2 +1,2 @@
 <h1>My First Website</h1>
- <p>My favorite colour is blue</p>
+ <p>My favorite colour is <span style = "color:blue;">blue</span></p>
